--- a/views/admin/candidates.ejs
+++ b/views/admin/candidates.ejs
@@ -441,7 +441,7 @@
           <button class="action-button" id="submitBtn">Deploy Candidates to Blockchain</button>
 
           <!-- Reset Candidates Button (Initially Hidden) -->
-          <button class="action-button" id="resetCandidatesBtn" style="display: none">Reset Candidates</button>
+          <button class="action-button" id="resetCandidatesBtn">Reset Candidates</button>
 
           <!-- Status Message -->
           <p id="statusMessage"></p>
