--- a/views/admin/candidates.ejs
+++ b/views/admin/candidates.ejs
@@ -1146,5 +1146,6 @@
 
     <script src="admin/js/sidebar.js"></script>
     <script src="admin/js/index_admin.js"></script>
+    <script src="admin/js/dropdown.js"></script>
   </body>
 </html>
