--- a/views/admin/configuration.ejs
+++ b/views/admin/configuration.ejs
@@ -444,5 +444,6 @@
         history.replaceState({}, document.title, window.location.pathname);
       }
     </script>
+    <script src="admin/js/dropdown.js"></script>
   </body>
 </html>
