--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -488,5 +488,6 @@
       document.getElementById("currentPeriodDisplay").innerText = electionConfig.currentPeriod.name;
       document.getElementById("currentPeriodDuration").innerText = electionConfig.currentPeriod.duration;
     </script> -->
+    <script src="admin/js/dropdown.js"></script>
   </body>
 </html>
