--- a/views/admin/election-reset.ejs
+++ b/views/admin/election-reset.ejs
@@ -276,5 +276,6 @@
 
     <script src="admin/js/sidebar.js"></script>
     <script src="admin/js/index-admin.js"></script>
+    <script src="admin/js/dropdown.js"></script>
   </body>
 </html>
