--- a/views/admin/blockchain-activity-log.ejs
+++ b/views/admin/blockchain-activity-log.ejs
@@ -255,5 +255,6 @@
 
     <script src="admin/js/sidebar.js"></script>
     <script src="admin/js/index-admin.js"></script>
+    <script src="admin/js/dropdown.js"></script>
   </body>
 </html>
